--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest",
     "genimg": "node genimg src/assets/images --output src/res/images.tsx --name images",
     "realDevice": "adb reverse tcp:8081 tcp:8081",
+    "reactotron": "adb reverse tcp:9090 tcp:9090",
     "buildApk": "cd android && ./gradlew assembleRelease",
     "buildAab": "cd android && ./gradlew bundleRelease",
     "link": "react-native link",
@@ -48,6 +49,8 @@
     "metro-react-native-babel-preset": "0.73.9",
     "prettier": "^2.4.1",
     "react-test-renderer": "18.2.0",
+    "reactotron-react-native": "^5.0.3",
+    "reactotron-redux": "^3.1.3",
     "typescript": "^5.0.4"
   },
   "jest": {
