--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,9 +1,10 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-platform :ios, min_ios_version_supported
+platform :ios, "12.4"
+install! "cocoapods", :deterministic_uuids => false
 prepare_react_native_project!
-
+$RNFirebaseAsStaticFramework = true
 # If you are using a `react-native-flipper` your iOS build will fail when `NO_FLIPPER=1` is set.
 # because `react-native-flipper` depends on (FlipperKit,...) that will be excluded
 #
@@ -23,7 +24,8 @@ end
 
 target 'ExampleOne' do
   config = use_native_modules!
-
+  # use_frameworks!
+  use_frameworks! :linkage => :static
   # Flags change depending on the env values.
   flags = get_default_flags()
 
@@ -38,7 +40,7 @@ target 'ExampleOne' do
     #
     # Note that if you have use_frameworks! enabled, Flipper will not work and
     # you should disable the next line.
-    :flipper_configuration => flipper_config,
+    # :flipper_configuration => flipper_config,
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
