--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-native-firebase/auth": "^18.0.0",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
     "formik": "^2.4.1",
     "lodash": "^4.17.21",
@@ -36,6 +37,7 @@
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
     "react-navigation": "^4.4.4",
+    "react-redux": "^8.1.1",
     "yup": "^1.2.0"
   },
   "devDependencies": {
